--- a/scripts/scripts/testing/source_table.html
+++ b/scripts/scripts/testing/source_table.html
@@ -1,5 +1,5 @@
 <h3>Download the data</h3>
-<p class="has-text-align-center">Last update: <strong>January 31, 2022 22:00, London time</strong>.<br><em>(Our testing dataset is updated around twice a week.)</em></p>
+<p class="has-text-align-center">Last update: <strong>February 2, 2022 17:00, London time</strong>.<br><em>(Our testing dataset is updated around twice a week.)</em></p>
 <p>We make our full testing dataset, alongside detailed source descriptions, available&nbsp;<a href="https://github.com/owid/covid-19-data/tree/master/public/data/">on GitHub here</a>. Our testing dataset is updated around twice a week.</p>
 <h3>How to cite our testing data</h3>
 <p>Hasell, J., Mathieu, E., Beltekian, D. <em>et al.</em> A cross-country database of COVID-19 testing. <em>Sci Data</em> <strong>7</strong>, 345 (2020). <a href="https://doi.org/10.1038/s41597-020-00688-8">https://doi.org/10.1038/s41597-020-00688-8</a></p>
@@ -16,8 +16,8 @@
 <p>Countries publish their testing data at different frequencies: some provide daily updates, others only weekly, and some only publish figures on an ad-hoc basis at longer intervals.</p>
 <p>Because of this, the most recent data we have for different countries refers to different dates. This chart shows you how up to date the latest data is for each country in our dataset.</p>
 <p>Our dataset covers <strong>92%</strong> of the world's population:</p>
-<ul><li><strong>47%</strong> is covered with figures relating to <strong>30 January 2022</strong> or later;</li>
-<li><strong>67%</strong> is covered with figures relating to <strong>24 January 2022</strong> or later.</li>
+<ul><li><strong>39%</strong> is covered with figures relating to <strong>1 February 2022</strong> or later;</li>
+<li><strong>67%</strong> is covered with figures relating to <strong>26 January 2022</strong> or later.</li>
 </ul>
 <iframe src="https://ourworldindata.org/grapher/how-recent-is-the-latest-testing-data-for-each-country-last-update" style="width: 100%; height: 600px; border: 0px none;"></iframe>
 <h3>Source information country by country</h3><p>This is the list of the 147 countries for which we have data.<br>At the very bottom of this post, you can also find the list of countries for which we have attempted to collect data but could not find official sources.<br>You can download the full dataset alongside the detailed source descriptions <a href="https://github.com/owid/covid-19-data/tree/master/public/data/">on GitHub</a>.<br>Or else click to jump to the detailed source description and the latest data for that country:</p>
@@ -575,7 +575,7 @@
 <p><strong>Short description: </strong>The number of tests performed.</p>
 <p><strong>Test definition: </strong>PCR</p>
 <p><strong>Case definition: </strong>Unclear</p>
-<p><strong>Positive rate: </strong>calculated by Our World in Data as the 7-day rolling average of daily cases, divided by the 7-day rolling average of daily tests.</p>
+<p><strong>Positive rate: </strong>collected directly from the source. This means that the number of cases that can be deduced based on the number of tests and the positivity rate, is not necessarily equal to the number of cases visible in the rest of our COVID-19 data, which we import from Johns Hopkins University.</p>
 <p><strong>Detailed description:</strong><br>The Icelandic Office of Public Health publishes a complete time series of tests performed, broken down into testing scheme. No other information is provided. It is not clear whether these figures include samples that are pending test results. The daily time-series data extends back to 27 February 2020.<br><br>Testing figures include "Diagnostic tests", "Quarantine and random screening" tests, and "deCODE Genetics screening" tests, and exclude "Border screening 1 and 2" tests. The number of confirmed cases does not match the number of domestic infections from the types of tests included in the testing figures. We therefore remove our estimate of the positive rate.<br><br>Note that, due to the way the data is presented by the official source, the time series may be impacted by retrospective revisions made by the source. See our <a href="https://ourworldindata.org/coronavirus-testing#does-your-data-reflect-retrospective-updates-made-by-the-source">FAQ here</a>.</p>
 
 <h4>India</h4>
@@ -762,7 +762,7 @@
 <p><strong>Short description: </strong>The number of tests performed.</p>
 <p><strong>Test definition: </strong>PCR</p>
 <p><strong>Case definition: </strong>PCR</p>
-<p><strong>Positive rate: </strong>calculated by Our World in Data as the 7-day rolling average of daily cases, divided by the 7-day rolling average of daily tests.</p>
+<p><strong>Positive rate: </strong>collected directly from the source. This means that the number of cases that can be deduced based on the number of tests and the positivity rate, is not necessarily equal to the number of cases visible in the rest of our COVID-19 data, which we import from Johns Hopkins University.</p>
 <p><strong>Detailed description:</strong><br>The Luxembourg government provides a complete time series of the cumulative number of PCR tests performed since February 2020.<br><br>The same source also provides a time series of the number of people tested, but it is unclear whether or not this cumulative figure repeatedly counts people that have gone through more than one round of testing over the course of the pandemic. Since we derive a count of the daily number of people tested from the change in this cumulative number, if people undergoing multiple rounds of testing are not counted repeatedly in the cumulative, repeat testers would not appear in our daily testing figures. We therefore do not collect this data on the number of people tested.</p>
 
 <h4>Madagascar</h4>
